# api.unverified.email

./: .env  .ghci  .gitignore  .stylish-haskell.yaml  LICENSE  README.md  api-unverified-email.cabal  do  makefile  stack.yaml  unverified-email-api.cabal
.buildkite/: pipeline.yml
api/: LICENSE  README.md  api-unverified-email.cabal
api/src/: Dispatcher.hs
api/src/Action/: New.hs  Receive.hs  Usage.hs
api/src/Controller/: Mailbox.hs
api/src/Model/: Email.hs
api/test/: Test.hs
api/test/Test/Hspec/Wai/: JsonMatchers.hs
app/: Main.hs
infra/: docker-compose.yaml  nomad-definitions.hcl  variables.sh
infra/api/: Dockerfile  Dockerfile.alpine  entrypoint.sh
infra/container/: Dockerfile
infra/scripts/: build-containers.sh  deploy.sh  variables.sh
infra/smtpd/: Dockerfile  smtpd.conf
src/: Dispatcher.hs  Env.hs
src/Action/: Create.hs  Receive.hs  Usage.hs
src/Controller/: Mailbox.hs
src/Model/: Email.hs  Mailbox.hs  Usage.hs
test/: Test.hs
test/Controller/: CreateTest.hs  ReceiveTest.hs  UsageTest.hs
test/Test/Hspec/Wai/: FeatureToggle.hs  ValueMatchers.hs
