name:                unverified-email-api
version:             0.1.0.0
homepage:            https://github.com/ptek/unverified.email
license:             BSD3
license-file:        LICENSE
author:              Pavlo Kerestey
maintainer:          pavlo {at} kerestey.net
copyright:           2019 Pavlo Kerestey
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:
      src
  exposed-modules:
      Action.Create
    , Action.Receive
    , Action.Usage
    , Dispatcher
    , Controller.Mailbox
    , Model.Mailbox
    , Model.Email
    , Model.Usage
    , Env
  build-depends:
      aeson
    , base >= 4.7 && < 5
    , bytestring
    , directory
    , envy
    , load-env
    , prometheus-client
    , prometheus-metrics-ghc
    , protolude
    , retry
    , scotty
    , scotty-tls
    , string-convert
    , string-interpolate
    , text
    , time
    , iso8601-time
    , unix
    , uuid
    , wai
    , wai-extra
    , wai-middleware-prometheus
  default-extensions:
      DeriveFoldable
    , DeriveFunctor
    , DeriveGeneric
    , DeriveTraversable
    , GeneralizedNewtypeDeriving
    , LambdaCase
    , MultiWayIf
    , NamedFieldPuns
    , NoImplicitPrelude
    , NumericUnderscores
    , OverloadedLists
    , OverloadedStrings
    , RecordWildCards
    , ScopedTypeVariables
    , TupleSections
    , ViewPatterns
  ghc-options:
      -Wall -j
  default-language:
      Haskell2010

executable unverified-email-api
  hs-source-dirs:
      app
  main-is:
      Main.hs
  ghc-options:
      -Wall -Werror -threaded -O2 -rtsopts -with-rtsopts=-N -j -static
  build-depends:
      base
    , unverified-email-api
  default-language:
      Haskell2010

test-suite unverified-email-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  other-modules:
      Test.Hspec.Wai.ValueMatchers
    , Test.Hspec.Wai.FeatureToggle
    , Controller.CreateTest
    , Controller.UsageTest
    , Controller.ReceiveTest
  build-depends:
      unverified-email-api
    , aeson
    , base
    , directory
    , hspec
    , hspec-core
    , hspec-expectations-lifted
    , hspec-wai
    , hspec-wai-json
    , http-types
    , load-env
    , microlens
    , microlens-aeson
    , protolude
    , string-convert
    , string-interpolate
    , text
    , time
    , uuid
    , wai
    , wai-extra
  default-extensions:
      OverloadedStrings
    , TupleSections
    , LambdaCase
    , MultiWayIf
    , NumericUnderscores
    , OverloadedLists
    , ViewPatterns
    , ScopedTypeVariables
    , RecordWildCards
    , NamedFieldPuns
    , GeneralizedNewtypeDeriving
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DeriveGeneric
    , QuasiQuotes
  ghc-options:         -Wall -threaded -O2 -rtsopts -with-rtsopts=-N -fno-cse
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ptek/unverified.email
